--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demonstrate how to use Data Structure and Algorithms in TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MagicMike90/javascript-algorithms-and-data-structure#readme",
   "devDependencies": {
+    "@types/jest": "^25.1.1",
     "ts-node": "^8.6.2"
   },
   "dependencies": {
