--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/MagicMike90/javascript-algorithms-and-data-structure#readme",
   "devDependencies": {
     "@types/jest": "^25.1.1",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "eslint": "^6.8.0",
     "ts-node": "^8.6.2"
   },
   "dependencies": {
