--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     "pretty": true /* Stylize errors and messages using color and context. */
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "test/*.spec.ts"]
+  "exclude": ["node_modules", "test/*.test.ts"]
 }
