--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "binaryTree": "ts-node src/binaryTree/main.ts",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
