--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@types/node": "^13.7.0",
     "jest": "^25.1.0",
+    "lodash": "^4.17.15",
     "ts-jest": "^25.2.0",
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
